2011-07-28  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/parser/ClaspResultOnlineParser.h: Allow parsing models returned
	in more than 1 line.
	* include/parser/ClaspResultOnlineParser.tcc: Likewise.

2011-04-21  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* examples/tables.py: Update script to extract memory usage.

2011-04-19  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/dmcsc.cpp: Fix looping to get k unique models.

	* include/dmcs/ModelSessionId.h: Fix a corner case that causes memory leak.

	* src/network/JoinThread.cpp: Add some debugging infor.
	* include/network/NeighborThread.h: Likewise.

	* testsuite/Makefile.am: Add testJoinLeak.
	* testsuite/testJoinLeak.cpp: Likewise.

2011-04-15  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/ModelSessionId.h: Remove duplication and delete
	unused pointers.
	* include/network/NeighborThread.h: Likewise.

	* testsuite/Makefile.am: Add new test case.
	* testsuite/testRemoveDuplication.cpp: Likewise.

2011-04-15  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/ModelSessionId.h: Split serialization to load and save.

	* src/network/JoinThread.cpp: Fix memory leaks.
	* src/solver/RelSatSolver.cpp: Likewise.

2011-04-13  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/Handler.tcc: Clean up.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/Server.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* include/network/Server.h: Likewise.

	* include/dmcs/ProgramOptions.h: Change some commandline options.

2011-04-04  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* examples/runTest.sh: ulimit to the rescure.

	* examples/genTest.sh: New setting.

	* src/dmcsc.cpp: Fix semantics of --k=0.
	Print total number of equilibria.

	* src/generator/staticGen.cpp: Fix DMCSPATH.

	* include/generator/DiamondOptTopoGenerator.h: Clean up.

2011-04-03  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/generator/staticGen.cpp: Add streaming script.
