@@ -38,6 +38,7 @@
 #include <boost/date_time/time_duration.hpp>
 
 #include <queue>
+#include <map>
 #include <cstdio>
 #include <cstring>
 
@@ -363,7 +364,8 @@ namespace dmcs {
   typedef boost::shared_ptr<ConcurrentMessageQueue>    ConcurrentMessageQueuePtr;
   typedef std::vector<ConcurrentMessageQueuePtr>       ConcurrentMessageQueueVec;
   typedef boost::shared_ptr<ConcurrentMessageQueueVec> ConcurrentMessageQueueVecPtr;
-  
+  typedef std::map<std::size_t, ConcurrentMessageQueue*> CMQMap;
+  typedef boost::shared_ptr<CMQMap> CMQMapPtr;
 } // namespace dmcs
 
 
